knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Inflation_Escalators__c.field-meta.xml
<CustomField>
    <fullName>Inflation_Escalators__c</fullName>
    <label>Inflation Escalators</label>
    <length>40</length>
    <type>Text</type>
</CustomField>