knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Initial_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Effective_Date__c</fullName>
    <label>Initial Effective Date</label>
    <type>Date</type>
</CustomField>