knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Insurance_Limit_Comment__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Limit_Comment__c</fullName>
    <label>Insurance Limit Comment</label>
    <type>TextArea</type>
</CustomField>