knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Insurance_Limits__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Limits__c</fullName>
    <label>Insurance Limits</label>
    <length>40</length>
    <type>Text</type>
</CustomField>