knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Insurance_Provided_by_Other_Party__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provided_by_Other_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Provided by Other Party</label>
    <type>Checkbox</type>
</CustomField>