knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Interest_Penalty_Charge__c.field-meta.xml
<CustomField>
    <fullName>Interest_Penalty_Charge__c</fullName>
    <label>Interest Penalty Charge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>