knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Interest_Penalty_Charge_Flat_Flee__c.field-meta.xml
<CustomField>
    <fullName>Interest_Penalty_Charge_Flat_Flee__c</fullName>
    <label>Interest Penalty Charge (Flat Flee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>