knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Internal_Renewal_Notification_Days__c.field-meta.xml
<CustomField>
    <fullName>Internal_Renewal_Notification_Days__c</fullName>
    <label>Internal Renewal Notification Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>