knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Internal_Renewal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Renewal_Start_Date__c</fullName>
    <label>Internal Renewal Start Date</label>
    <type>Date</type>
</CustomField>