knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Internal_Renewal_Start_Date_formula__c.field-meta.xml
<CustomField>
    <fullName>Internal_Renewal_Start_Date_formula__c</fullName>
    <formula>IF( ISBLANK( Internal_Renewal_Notification_Days__c ) , Agreement_End_Date__c , Renewal_Notice_Date_formula__c  -  Internal_Renewal_Notification_Days__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Renewal Start Date</label>
    <type>Date</type>
</CustomField>