knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Issue_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Notice_Date__c</fullName>
    <label>Issue Notice Date</label>
    <type>Date</type>
</CustomField>