knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Issue_Renewal_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Renewal_Notice_Date__c</fullName>
    <label>Issue Renewal Notice Date</label>
    <type>Date</type>
</CustomField>