knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Last_Created_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Last_Created_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the ID of the most recently created Agreement for this Contract. Used for auto-redirect functionality.</description>
    <label>Last Created Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>