knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Last_Synched_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Synched_Date__c</fullName>
    <label>Last Synched Date</label>
    <type>DateTime</type>
</CustomField>