knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Leased_Employees__c.field-meta.xml
<CustomField>
    <fullName>Leased_Employees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leased Employees</label>
    <type>Checkbox</type>
</CustomField>