knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Legacy_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Record_Id__c</fullName>
    <label>Legacy Record Id</label>
    <type>TextArea</type>
</CustomField>