knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Legacy_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Record_Name__c</fullName>
    <label>Legacy Record Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>