knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <inlineHelpText>Legal Corporate Entity of the Hospital</inlineHelpText>
    <label>Legal Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>