knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Limited_Waiver_or_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Limited_Waiver_or_Exceptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limited Waiver (or Exceptions)</label>
    <type>Checkbox</type>
</CustomField>