knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Location_of_each_Hospital_City_State__c.field-meta.xml
<CustomField>
    <fullName>Location_of_each_Hospital_City_State__c</fullName>
    <label>Location of each Hospital (City &amp; State)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>