knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Margin_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Margin_Guarantee__c</fullName>
    <label>Margin Guarantee %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>