knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/MCO_Participation_Required__c.field-meta.xml
<CustomField>
    <fullName>MCO_Participation_Required__c</fullName>
    <label>MCO Participation Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>