knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Medical_Director_Annual_Fee__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director_Annual_Fee__c</fullName>
    <label>Leadership Monthly Stipend</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>