knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Medical_Staff_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Medical_Staff_Coordinator__c</fullName>
    <label>Medical Staff Coordinator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>