knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Medicare_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Comparison__c</fullName>
    <label>Medicare Comparison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>