knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Medicare_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Reimbursement__c</fullName>
    <label>Medicare Reimbursement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>