knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Method_Of_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Method_Of_Enrollment__c</fullName>
    <label>Method Of Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physician Listing - MC</fullName>
            </value>
            <value>
                <fullName>Corporate Contract - MC</fullName>
            </value>
            <value>
                <fullName>Spreadsheet - PE</fullName>
            </value>
            <value>
                <fullName>Online enrollment - PE</fullName>
            </value>
            <value>
                <fullName>Linked Form - Provider (Individual) Signature - PE</fullName>
            </value>
            <value>
                <fullName>Linked Form - Corporate Signature - PE</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Spreadsheet - Hold</fullName>
            </value>
            <value>
                <fullName>Spreadsheet - No Hold</fullName>
            </value>
            <value>
                <fullName>Online Enrollment - Hold</fullName>
            </value>
            <value>
                <fullName>Online Enrollment - No Hold</fullName>
            </value>
            <value>
                <fullName>Linked Form - Provider Signature - Hold</fullName>
            </value>
            <value>
                <fullName>Linked Form - Provider Signature - No Hold</fullName>
            </value>
            <value>
                <fullName>Linked Form - Corporate Signature - Hold</fullName>
            </value>
            <value>
                <fullName>Linked Form - Corporate Signature - No Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>