knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Miles__c.field-meta.xml
<CustomField>
    <fullName>Miles__c</fullName>
    <label>Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>