knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Monthly_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Subsidy__c</fullName>
    <label>Monthly Subsidy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>