knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Multi_Payer__c.field-meta.xml
<CustomField>
    <fullName>Multi_Payer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi Payer</label>
    <type>Checkbox</type>
</CustomField>