knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Name_of_Client_Entity__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Client_Entity__c</fullName>
    <label>Name of Client Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>