knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Name_of_Client_Representative__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Client_Representative__c</fullName>
    <inlineHelpText>Name of Client Representative LOI will be addressed to</inlineHelpText>
    <label>Name of Client Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>