knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Name_of_each_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Name_of_each_Hospital__c</fullName>
    <label>Name of each Hospital</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>