knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/New_Payer_List__c.field-meta.xml
<CustomField>
    <fullName>New_Payer_List__c</fullName>
    <label>New Payer List</label>
    <type>Date</type>
</CustomField>