knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Next_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal__c</fullName>
    <label>Next Renewal</label>
    <type>Date</type>
</CustomField>