knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Non_Compete_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Non_Compete_End_Date__c</fullName>
    <label>Non-Compete End Date</label>
    <type>Date</type>
</CustomField>