knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Non_Compete_Radius__c.field-meta.xml
<CustomField>
    <fullName>Non_Compete_Radius__c</fullName>
    <label>Non-Compete Radius</label>
    <length>25</length>
    <type>Text</type>
</CustomField>