knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Non_eroding_Limits_Required__c.field-meta.xml
<CustomField>
    <fullName>Non_eroding_Limits_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-eroding Limits Required</label>
    <type>Checkbox</type>
</CustomField>