knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Non_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Non_Solicitation__c</fullName>
    <label>Non-Solicitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restriction Against SCP</fullName>
            </value>
            <value>
                <fullName>Restriction Against Client</fullName>
            </value>
            <value>
                <fullName>Mutual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>