knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Non_Solicitation_ckbox__c.field-meta.xml
<CustomField>
    <fullName>Non_Solicitation_ckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Solicitation</label>
    <type>Checkbox</type>
</CustomField>