knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Non_Solicitation_Details__c.field-meta.xml
<CustomField>
    <fullName>Non_Solicitation_Details__c</fullName>
    <label>Non-Solicitation Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>