knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Notice_Address__c.field-meta.xml
<CustomField>
    <fullName>Notice_Address__c</fullName>
    <label>Notice Address</label>
    <type>Address</type>
</CustomField>