knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Days__c</fullName>
    <label>Notice Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>