knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/NP_PA_Blended_Incentive_Hourly__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Blended_Incentive_Hourly__c</fullName>
    <label>(NP/PA) Blended Incentive Hourly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>