knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/NP_PA_Compensation_Type__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Compensation_Type__c</fullName>
    <label>(NP/PA) Compensation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Hourly with SRP</fullName>
            </value>
            <value>
                <fullName>Hourly with Incentive</fullName>
            </value>
            <value>
                <fullName>Hourly with SRP/Incentive</fullName>
            </value>
            <value>
                <fullName>Per patient encounter</fullName>
            </value>
            <value>
                <fullName>Per minute per eMAC encounter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>