knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/NP_PA_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Coverage_Type__c</fullName>
    <label>(NP/PA) Coverage Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EM - Acute Care</fullName>
            </value>
            <value>
                <fullName>EM - Fast Track</fullName>
            </value>
            <value>
                <fullName>EM - Urgent Care</fullName>
            </value>
            <value>
                <fullName>EM - Rapid Medical Exam (RME)</fullName>
            </value>
            <value>
                <fullName>EM - Intermediate Care</fullName>
            </value>
            <value>
                <fullName>EM - Acute Care Double Coverage</fullName>
            </value>
            <value>
                <fullName>HM - Adult</fullName>
            </value>
            <value>
                <fullName>HM - Peds</fullName>
            </value>
            <value>
                <fullName>eHealth</fullName>
            </value>
            <value>
                <fullName>PAPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>