knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/NP_PA_Hours_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Hours_Per_Year__c</fullName>
    <label>(NP/PA) Hours Per Year</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>