knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/NP_PA_Name__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NP/PA Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (NP/PA Name)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>