knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/NP_PA_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Reimbursement__c</fullName>
    <label>NP/PA Reimbursement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>