knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/NPIM__c.field-meta.xml
<CustomField>
    <fullName>NPIM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPIM</label>
    <type>Checkbox</type>
</CustomField>