knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/NPPA_Tier__c.field-meta.xml
<CustomField>
    <fullName>NPPA_Tier__c</fullName>
    <label>NPPA Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>140</fullName>
            </value>
            <value>
                <fullName>168</fullName>
            </value>
            <value>
                <fullName>162</fullName>
                <isActive>false</isActive>
                <label>162</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>