knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/NPPA_Tier_Changed__c.field-meta.xml
<CustomField>
    <fullName>NPPA_Tier_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPPA Tier Changed</label>
    <type>Checkbox</type>
</CustomField>