knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Occurrence_Form_Required__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Form_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Occurrence Form Required</label>
    <type>Checkbox</type>
</CustomField>