knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Occurrence_Limit__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Limit__c</fullName>
    <label>Occurrence Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>