knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/of_Auto_Renewals_Allowed__c.field-meta.xml
<CustomField>
    <fullName>of_Auto_Renewals_Allowed__c</fullName>
    <label># of Auto Renewals Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>