knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <formula>CASESAFEID(SourceOpportunity.Id)</formula>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>