knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Ops_Finance__c.field-meta.xml
<CustomField>
    <fullName>Ops_Finance__c</fullName>
    <label>Ops Finance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>