knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Other_Financial_Model_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Other_Financial_Model_Explanation__c</fullName>
    <label>Other Financial Model Explanation</label>
    <type>TextArea</type>
</CustomField>