knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Other_Free_Text_for_One_Off_Situations__c.field-meta.xml
<CustomField>
    <fullName>Other_Free_Text_for_One_Off_Situations__c</fullName>
    <label>Other (Free Text for One Off Situations)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>