knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Other_Key_Terms_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Other_Key_Terms_Assumptions__c</fullName>
    <inlineHelpText>i.e. MOR/Governance/GME program, Malpractice limits, etc.</inlineHelpText>
    <label>Other Key Terms &amp; Assumptions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>