knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Other_Measure__c.field-meta.xml
<CustomField>
    <fullName>Other_Measure__c</fullName>
    <label>Other Measure</label>
    <type>TextArea</type>
</CustomField>