knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Other_Party_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Sent_Date__c</fullName>
    <label>Other Party Sent Date</label>
    <type>Date</type>
</CustomField>