knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Outstanding_Days__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Days__c</fullName>
    <formula>IF(
    RecordType.DeveloperName = &quot;Client&quot;,
    (NULLVALUE(Returned_Date__c , TODAY() ) - Sent_Date__c),
    IF(
        RecordType.DeveloperName = &quot;Client_Contract&quot;,
        (Requested_Date__c - Date_Distributed__c),
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>