knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Paper_Rating_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Paper_Rating_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paper Rating Requirement</label>
    <type>Checkbox</type>
</CustomField>