knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/PAR_Non_PAR__c.field-meta.xml
<CustomField>
    <fullName>PAR_Non_PAR__c</fullName>
    <label>PAR/Non-PAR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAR</fullName>
            </value>
            <value>
                <fullName>NON-PAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>