knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Per_Chart_Call_Fee__c.field-meta.xml
<CustomField>
    <fullName>Per_Chart_Call_Fee__c</fullName>
    <label>Per Chart/Call/ Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>