knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/per_year__c.field-meta.xml
<CustomField>
    <fullName>per_year__c</fullName>
    <label>$ per year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>