knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Performance_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Performance_Analyst__c</fullName>
    <label>Performance Analyst</label>
    <length>50</length>
    <type>Text</type>
</CustomField>