knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Performance_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Performance_Metrics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performance Metrics</label>
    <type>Checkbox</type>
</CustomField>