knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Performance_Metrics_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Performance_Metrics_Expiration_Date__c</fullName>
    <label>Performance Metrics Expiration Date</label>
    <type>Date</type>
</CustomField>