knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/PHO__c.field-meta.xml
<CustomField>
    <fullName>PHO__c</fullName>
    <label>PHO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CHA</fullName>
            </value>
            <value>
                <fullName>CHP</fullName>
            </value>
            <value>
                <fullName>HCRHN</fullName>
            </value>
            <value>
                <fullName>PCNW</fullName>
            </value>
            <value>
                <fullName>PHC</fullName>
            </value>
            <value>
                <fullName>POET</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>SMGS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>