knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/PHY_Blended_Hourly__c.field-meta.xml
<CustomField>
    <fullName>PHY_Blended_Hourly__c</fullName>
    <label>(PHY) Blended Hourly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>