knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/PHY_Compensation_Type__c.field-meta.xml
<CustomField>
    <fullName>PHY_Compensation_Type__c</fullName>
    <label>(PHY) Compensation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RVU</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Hourly with SRP</fullName>
            </value>
            <value>
                <fullName>Hourly with Incentive</fullName>
            </value>
            <value>
                <fullName>Hourly with SRP/Incentive</fullName>
            </value>
            <value>
                <fullName>Per patient encounter</fullName>
            </value>
            <value>
                <fullName>Per minute per eMAC encounter</fullName>
            </value>
            <value>
                <fullName>Stipend</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>